--- a/tapper/Base.lproj/Main.storyboard
+++ b/tapper/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tapper" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,95 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retrobg" translatesAutoresizingMaskIntoConstraints="NO" id="Z3P-nk-Lqe" userLabel="Background">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Tapper" translatesAutoresizingMaskIntoConstraints="NO" id="hTK-Jm-csK" userLabel="Logo">
+                                <rect key="frame" x="107" y="52" width="366" height="78"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="366" id="VhV-p0-ZN0"/>
+                                    <constraint firstAttribute="height" constant="78" id="mfV-Z2-MYG"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wv4-lH-Vp2" userLabel="PlayButton">
+                                <rect key="frame" x="176" y="415" width="249" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="249" id="1Lg-hs-aeb"/>
+                                    <constraint firstAttribute="height" constant="120" id="fB1-44-biI"/>
+                                </constraints>
+                                <state key="normal" image="playbtn"/>
+                                <connections>
+                                    <action selector="onPlayButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yke-Lw-hIJ"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="How many taps to win?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j6I-76-AKi" userLabel="TapsText">
+                                <rect key="frame" x="176" y="362" width="249" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="2KS-Wz-MQy"/>
+                                    <constraint firstAttribute="width" constant="249" id="7bU-lC-Xdp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VVx-a2-Y4v" userLabel="CoinButton">
+                                <rect key="frame" x="214" y="28" width="172" height="177"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="177" id="Pdu-S3-Hkf"/>
+                                    <constraint firstAttribute="width" constant="172" id="V1O-aF-TO9"/>
+                                </constraints>
+                                <state key="normal" image="coin"/>
+                                <connections>
+                                    <action selector="onCoinTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R96-bL-7SH"/>
+                                </connections>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1000 Taps" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQc-rk-ixH" userLabel="TapsLabel">
+                                <rect key="frame" x="141" y="223" width="299" height="89"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="89" id="NDo-Ov-2hj"/>
+                                    <constraint firstAttribute="width" constant="299" id="p3W-yA-YBq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="41"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Z3P-nk-Lqe" secondAttribute="trailing" id="1up-Wx-A5c"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Z3P-nk-Lqe" secondAttribute="bottom" id="2VE-Tx-Okb"/>
+                            <constraint firstItem="hTK-Jm-csK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6cO-R2-DOQ"/>
+                            <constraint firstItem="hTK-Jm-csK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="32" id="8re-VH-YAr"/>
+                            <constraint firstItem="wv4-lH-Vp2" firstAttribute="top" secondItem="j6I-76-AKi" secondAttribute="bottom" constant="23" id="Eoy-ZB-UCd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wv4-lH-Vp2" secondAttribute="bottom" constant="65" id="N5Y-iR-TwI"/>
+                            <constraint firstItem="VVx-a2-Y4v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Sfk-qi-dye"/>
+                            <constraint firstItem="iQc-rk-ixH" firstAttribute="top" secondItem="VVx-a2-Y4v" secondAttribute="bottom" constant="18" id="TLJ-AE-p1Z"/>
+                            <constraint firstItem="VVx-a2-Y4v" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="Tjw-ak-XLX"/>
+                            <constraint firstItem="wv4-lH-Vp2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b4f-hv-VDp"/>
+                            <constraint firstItem="iQc-rk-ixH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cuL-ba-Orv"/>
+                            <constraint firstItem="Z3P-nk-Lqe" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dYV-xb-Qdq"/>
+                            <constraint firstItem="Z3P-nk-Lqe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gQZ-xa-umj"/>
+                            <constraint firstItem="hTK-Jm-csK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="rw1-z6-Mhg"/>
+                            <constraint firstItem="wv4-lH-Vp2" firstAttribute="centerX" secondItem="j6I-76-AKi" secondAttribute="centerX" id="wVa-z3-XZe"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="howManyTapsTxt" destination="j6I-76-AKi" id="HNZ-CR-MiI"/>
+                        <outlet property="logoImg" destination="hTK-Jm-csK" id="ct5-oC-fBB"/>
+                        <outlet property="playButton" destination="wv4-lH-Vp2" id="W2M-bX-TFQ"/>
+                        <outlet property="tapButton" destination="VVx-a2-Y4v" id="0xF-zb-UTq"/>
+                        <outlet property="tapsLabel" destination="iQc-rk-ixH" id="fZY-us-Wok"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="429"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Tapper" width="497" height="107"/>
+        <image name="coin" width="244" height="268"/>
+        <image name="playbtn" width="356" height="175"/>
+        <image name="retrobg" width="800" height="800"/>
+    </resources>
 </document>
